--- a/GivrsApp/app/src/main/res/layout/item_project.xml
+++ b/GivrsApp/app/src/main/res/layout/item_project.xml
@@ -28,7 +28,7 @@
                 android:background="#aaaaaa">
 
                 <ImageView
-                    android:id="@+id/imageViewFeed"
+                    android:id="@+id/imageViewProject"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
@@ -52,7 +52,12 @@
                     android:text="Large Text"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:maxLines="3"
-                    android:layout_alignBottom="@+id/imageViewFeed" />
+                    android:layout_alignBottom="@+id/imageViewProject" />
+                <TextView
+                    android:id="@+id/textViewName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
             </RelativeLayout>
 
             <TextView
@@ -63,8 +68,18 @@
                 android:padding="16dp"
                 android:text="Medium Text"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
+            <TextView
+                android:id="@+id/textViewReadMore"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="@string/reade_more"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+            <TextView
+                android:id="@+id/textViewDistance"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
-
-
 </LinearLayout>
