--- a/GivrsApp/app/src/main/res/layout/activity_create_project.xml
+++ b/GivrsApp/app/src/main/res/layout/activity_create_project.xml
@@ -1,85 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="12dp"
+    android:scrollbars="none"
     tools:context="es.moldovan.givrsapp.CreateProjectActivity">
 
-    <ScrollView
-        android:id="@+id/scrollView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
+
+        <TextView
+            android:id="@+id/createProjectBanner"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="Start giving filling the following form"
+            android:textAppearance="?android:attr/textAppearanceMedium">
 
-            <TextView
+            <requestFocus />
+        </TextView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Start giving filling the following form"
-                android:id="@+id/textView"
-                android:layout_gravity="center_vertical"
-                android:gravity="center" />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="12dp">
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp">
-
-                <EditText
-                    android:id="@+id/createProjectTitle"
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Title"
-                    android:singleLine="true" />
+                    android:layout_marginTop="4dp">
 
-            </android.support.design.widget.TextInputLayout>
+                    <EditText
+                        android:id="@+id/createProjectTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Title"
+                        android:singleLine="true" />
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp">
+                </android.support.design.widget.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/createProjectDescription"
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Description"
-                    android:imeOptions="actionNext"
-                    android:ellipsize="end"
-                    android:maxLines="3"
-                    android:minLines="1" />
+                    android:layout_marginTop="4dp">
 
-            </android.support.design.widget.TextInputLayout>
+                    <EditText
+                        android:id="@+id/createProjectDescription"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:hint="Description"
+                        android:imeOptions="actionNext"
+                        android:maxLines="3"
+                        android:minLines="1" />
 
-            <com.mapbox.mapboxsdk.views.MapView
-                android:id="@+id/mapview"
-                android:layout_width="fill_parent"
-                android:layout_margin="7dp"
-                android:layout_height="220dp"/>
+                </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp">
+                <com.mapbox.mapboxsdk.views.MapView
+                    android:id="@+id/mapview"
+                    android:layout_width="fill_parent"
+                    android:layout_height="220dp"
+                    android:layout_margin="7dp" />
 
-            <EditText
-                android:id="@+id/createProjectImage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Image"
-                android:singleLine="true" />
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp">
 
-            </android.support.design.widget.TextInputLayout>
+                    <EditText
+                        android:id="@+id/createProjectImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Image"
+                        android:singleLine="true" />
 
-        </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+                </android.support.design.widget.TextInputLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="18dp"
+                    android:text="Now add the goods and services needed"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                <me.gujun.android.taggroup.TagGroup
+                    android:id="@+id/tag_group"
+                    style="@style/TagGroup.Beauty_Red.Large"
+                    android:paddingBottom="8dp"
+                    android:paddingTop="8dp"
+                    mapbox:atg_inputHint="new item"
+                    mapbox:atg_isAppendMode="true" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="18dp"
+                    android:text="Finally you will need to add instructions to deliver the goods or services. It may be an address, contact, etc."
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp">
+
+                    <EditText
+                        android:id="@+id/createProjectInstructions"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Instructions"
+                        android:singleLine="true" />
+
+                </android.support.design.widget.TextInputLayout>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <Button
+            android:id="@+id/createProjectSubmit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:text="Submit" />
+
+    </LinearLayout>
+
+
+</ScrollView>
