--- a/GivrsApp/app/src/main/res/layout/item_project.xml
+++ b/GivrsApp/app/src/main/res/layout/item_project.xml
@@ -13,6 +13,7 @@
         android:layout_gravity="center"
         android:clickable="true"
         android:focusable="true"
+        card_view:cardUseCompatPadding="true"
         android:background="?android:attr/selectableItemBackground"
         android:foreground="?android:attr/selectableItemBackground"
         card_view:cardCornerRadius="4dp">
@@ -41,45 +42,98 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="false"
-                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentLeft="false"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="false"
                     android:layout_alignWithParentIfMissing="false"
-                    android:paddingBottom="8dp"
+                    android:paddingBottom="4dp"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
                     android:paddingTop="16dp"
                     android:text="Large Text"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:maxLines="3"
-                    android:layout_alignBottom="@+id/imageViewProject" />
+                    android:layout_alignBottom="@+id/imageViewProject"
+                    android:layout_alignParentRight="true"
+                    android:gravity="bottom|right"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:padding="2dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="2dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/imageView2"
+                    android:src="@drawable/ic_person" />
+
                 <TextView
                     android:id="@+id/textViewName"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:lines="1"
+                    android:singleLine="true"
+                    android:ellipsize="end" />
+
+                <View
+                    android:layout_width="2px"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginBottom="3dp"
+                    android:background="@color/divider"></View>
+
+                <ImageView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    />
-            </RelativeLayout>
+                    android:id="@+id/imageView3"
+                    android:src="@drawable/ic_distance" />
+
+                <TextView
+                    android:id="@+id/textViewDistance"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:lines="1"
+                    android:singleLine="true"
+                    android:ellipsize="end" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2px"
+                android:background="@color/divider"></View>
 
             <TextView
                 android:id="@+id/textViewContent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLength="300"
-                android:padding="16dp"
+                android:padding="8dp"
                 android:text="Medium Text"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-            <TextView
-                android:id="@+id/textViewReadMore"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:text="@string/reade_more"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-            <TextView
-                android:id="@+id/textViewDistance"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:textSize="16sp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:maxLines="2" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2px"
+                android:background="@color/divider"></View>
+
+            <me.gujun.android.taggroup.TagGroup
+                android:id="@+id/tag_group"
+                style="@style/TagGroup.Beauty_Red"
+                android:padding="8dp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
