--- a/GivrsApp/app/src/main/res/layout/item_search.xml
+++ b/GivrsApp/app/src/main/res/layout/item_search.xml
@@ -11,9 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:elevation="3dp"
         android:clickable="true"
         android:focusable="true"
-        android:background="?android:attr/selectableItemBackground"
+        card_view:cardElevation="5dp"
         android:foreground="?android:attr/selectableItemBackground"
         card_view:cardCornerRadius="4dp">
 
@@ -25,7 +26,8 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#aaaaaa">
+                android:background="#aaaaaa"
+                android:foreground="@color/colorPrimary">
 
                 <ImageView
                     android:id="@+id/imageViewProject_s"
@@ -34,7 +36,8 @@
                     android:adjustViewBounds="true"
                     android:maxHeight="120dp"
                     android:scaleType="centerCrop"
-                    android:visibility="gone" />
+                    android:visibility="gone"
+                    android:foreground="@color/colorPrimary" />
 
                 <TextView
                     android:id="@+id/textViewTitle_s"
@@ -45,19 +48,15 @@
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="false"
                     android:layout_alignWithParentIfMissing="false"
-                    android:paddingBottom="8dp"
+                    android:paddingBottom="5dp"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
                     android:paddingTop="16dp"
                     android:text="Large Text"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:maxLines="3"
-                    android:layout_alignBottom="@+id/imageViewProject" />
-                <TextView
-                    android:id="@+id/textViewName_s"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
+                    android:layout_alignBottom="@+id/imageViewProject"
+                    android:gravity="right" />
             </RelativeLayout>
 
             <TextView
@@ -68,6 +67,13 @@
                 android:padding="16dp"
                 android:text="Medium Text"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:id="@+id/textViewName_s"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
             <TextView
                 android:id="@+id/textViewReadMore_s"
                 android:layout_width="match_parent"
