--- a/GivrsApp/app/src/main/res/values/colors.xml
+++ b/GivrsApp/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00BCD4</color>
+    <color name="colorPrimary">#00bcd4</color>
     <color name="colorPrimaryDark">#0097A7</color>
     <color name="primary_light">#B2EBF2</color>
     <color name="colorAccent">#FFC107</color>
